Fix non scrollable on mobile

--- a/src/components/tabs/browse/browseTabStyle.scss
+++ b/src/components/tabs/browse/browseTabStyle.scss
@@ -34,7 +34,7 @@
 
 @media screen and (max-width: map-get(styleVariables.$breakpoints, "phone")) {
   .add_exam_list_container {
-    overflow: unset;
+    overflow: auto;
     margin:auto;
     text-align: center;
   }
